--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "xx",
-    "description": "Watch Online Full Movie, Avengers Endgame (2019) at full HD.1080p.HD|| Watch Avengers Endgame Online (2019) Full. free movie.123MOVIES",
+    "name": "got-6/game-of-thrones-season-8-episode-6-full-online-tv-finale",
+    "description": "Watch Game of Thrones Season 8 Episode 6 Official TV(HBO)",
     "keywords": ["dependency graph", "visualize dependencies", "visualize composer"],
     "homepage": "https://github.com/clue/graph-composer",
     "license": "MIT",
